<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_search_clear"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/search_clear"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_sort_top"
                    android:title="@string/top"
                    android:checked="true"/>

                <item
                    android:id="@+id/action_sort_tranding"
                    android:title="@string/trending"/>

            </group>

        </menu>

    </item>

    <item
        android:id="@+id/action_view"
        android:title="@string/view"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="ifRoom">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_view_list"
                    android:title="@string/list"
                    android:checked="true"/>

                <item
                    android:id="@+id/action_view_table"
                    android:title="@string/table"/>

            </group>

        </menu>

    </item>

</menu>